--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "koa-generator",
+  "name": "bo-koa",
   "version": "1.1.5",
   "description": "fullstack koa generator for koa 1.x and 2.x",
-  "main": "index.js",
+  "main": "bin/koa",
   "scripts": {
     "start": "npm publish .",
     "test": "mocha --reporter spec --bail --check-leaks test/",
     "test-ci": "mocha --reporter spec --check-leaks test/"
   },
-  "main": "bin/koa",
   "preferGlobal": true,
   "bin": {
     "koa": "./bin/koa",
-    "koa2": "./bin/koa2"
+    "koa2": "./bin/koa2",
+    "fe": "./test/fe"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
   "devDependencies": {
     "mocha": "2.2.5",
     "rimraf": "~2.2.8",
+    "sorted-object": "^1.0.0",
     "supertest": "1.0.1"
   },
   "engines": {
